Project

General

Profile

Actions

Bug #23370

closed

mgrc's ms_handle_reset races with send_pgstats()

Added by Kefu Chai about 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-03-14T12:29:45.168 INFO:teuthology.orchestra.run.mira056:Running: 'sudo adjust-ulimits ceph-coverage /home/ubuntu/cephtest/archive/coverage timeout 120 ceph --cluster ceph tell osd.7 flush_pg_stats'

2018-03-14T12:29:45.352 INFO:tasks.ceph.osd.7.mira112.stderr:ceph-osd: /build/ceph-13.0.1-3046-g9bcd9e4/obj-x86_64-linux-gnu/boost/include/boost/smart_ptr/intrusive_ptr.hpp:199: T* boost::intrusive_ptr<T>::operator->() const [with T = Connection]: Assertion `px != 0' failed.

    -7> 2018-03-14 12:29:45.345 7f42d275c700  4 mgrc ms_handle_reset ms_handle_reset con 0x561810c78000
    -6> 2018-03-14 12:29:45.345 7f42d275c700  4 mgrc reconnect Terminating session with 172.21.9.134:6800/12816
    -5> 2018-03-14 12:29:45.345 7f42d275c700  1 -- 172.21.9.134:6813/12919 mark_down 0x561810c78000 -- pipe dne
    -4> 2018-03-14 12:29:45.345 7f42d275c700  4 mgrc reconnect Starting new session with 172.21.9.134:6800/12816
    -3> 2018-03-14 12:29:45.345 7f42c3702700 20 osd.7 16 do_command tid 2 [{"prefix": "flush_pg_stats"}]
    -2> 2018-03-14 12:29:45.345 7f42d275c700  1 -- 172.21.9.134:6813/12919 --> 172.21.9.134:6800/12816 -- mgropen(osd.7) v3 -- ?+0 0x56180e8f4d00 con 0x56180e9acc60
    -1> 2018-03-14 12:29:45.345 7f42bc2cd700 10 osd.7 16 OSD::ms_get_authorizer type=mgr
     0> 2018-03-14 12:29:45.345 7f42c3702700 -1 *** Caught signal (Aborted) **

see /a/kchai-2018-03-14_04:42:43-rados-wip-kefu-testing-2018-03-14-1106-distro-basic-mira/2290058


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #23408: luminous: mgrc's ms_handle_reset races with send_pgstats()ResolvedKefu ChaiActions
Actions #1

Updated by Kefu Chai about 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Kefu Chai about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23408: luminous: mgrc's ms_handle_reset races with send_pgstats() added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF