mgr/MgrClient: guard send_pgstats() with lock

ms_handle_reset() races with send_pgstats(), and the latter could
reference a session with a null connection. so we need to guard
send_pgstats() with a lock.

Fixes: http://tracker.ceph.com/issues/23370
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit b17ff3c54b38c37f715a8cd165eba2c6b79f8d70)